infra/k8s/cart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: cart-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: cart
    template:
        metadata:
            labels:
                app: cart
        spec:
            containers:
                - name: cart
                  image: raazimuhammed/emc-cart
                  ports:
                      - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
    name: cart-srv
spec:
    selector:
        app: cart
    ports:
        - name: cart
          protocol: TCP
          port: 4003
          targetPort: 4003
