infra/k8s/mongo-cart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-cart
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo-cart
    template:
        metadata:
            labels:
                app: mongo-cart
        spec:
            containers:
                - name: mongo-cart
                  image: mongo
                  ports:
                      - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
    name: mongo-cart-svc
spec:
    selector:
        app: mongo-cart
    ports:
        - protocol: TCP
          port: 27017
          targetPort: 27017
