infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: product-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: product
    template:
        metadata:
            labels:
                app: product
        spec:
            containers:
                - name: product
                  image: raazimuhammed/emc-product
                  ports:
                      - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
    name: product-srv
spec:
    selector:
        app: product
    ports:
        - name: product
          protocol: TCP
          port: 4002
          targetPort: 4002
