infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - host: emc.com
          http:
              paths:
                  - path: /api/auth/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-srv
                            port:
                                number: 4000
                  - path: /api/product/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: product-srv
                            port:
                                number: 4002
                  - path: /api/cart/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: cart-srv
                            port:
                                number: 4003
                  - path: /api/user/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: user-srv
                            port:
                                number: 4001
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: client-srv
                            port:
                                number: 8080
